manifests/web/api-public.yml
apiVersion: v1
kind: Service
metadata:
  name: api-public
  labels:
    role: api-public
spec:
  clusterIP: None
  ports:
    - port: 80
      name: http
  selector:
    role: api-public
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-public
spec:
  minReadySeconds: 15
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 0%
  selector:
    matchLabels:
      role: api-public
  template:
    metadata:
      labels:
        role: api-public
      annotations:
        scheduler.alpha.kubernetes.io/critical-pod: 'true'
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: kubernetes.io/hostname
              labelSelector:
                matchLabels:
                  role: mongo
      containers:
        - name: api-public
          image: gcr.io/stratus-197318/web:master
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
          readinessProbe:
            initialDelaySeconds: 15
            timeoutSeconds: 15
            periodSeconds: 15
            httpGet:
              path: /users/by_username/Notch
              port: 80
          livenessProbe:
            initialDelaySeconds: 60
            timeoutSeconds: 60
            periodSeconds: 60
            httpGet:
              path: /users/by_username/Notch
              port: 80
          volumeMounts:
            - name: data
              mountPath: /minecraft/repo/data:ro
          resources:
            requests:
              cpu: 100m
              memory: 300Mi
      volumes:
        - name: data
          emptyDir:
