manifests/web/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: api.stratus.network
      http:
       paths:
         - backend:
             serviceName: api-public
             servicePort: 80
    - host: stratus.network
      http:
        paths:
          - backend:
              serviceName: web
              servicePort: 80
    - host: confirm.stratus.network
      http:
        paths:
          - backend:
              serviceName: web
              servicePort: 80
